#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT([bhnbot], [1.0], [jgworks@gmail.com])
AC_CONFIG_SRCDIR([src])
AM_INIT_AUTOMAKE(bhnbot, 1.0)
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

AC_ARG_WITH([ircserver], AS_HELP_STRING([--with-ircserver], [Define the IRC server to connect with]))
AC_ARG_WITH([ircport], AS_HELP_STRING([--with-ircport], [Define the IRC port to connect with]))
AC_ARG_WITH([ircnick], AS_HELP_STRING([--with-ircnick], [Define the IRC nick to connect with]))
AC_ARG_WITH([ircchannel], AS_HELP_STRING([--with-ircchannel], [Define the IRC channel to connect to]))
AC_ARG_ENABLE([http], AS_HELP_STRING([--disable-http], [Disables looking for page titles]))
AC_ARG_ENABLE([stumblefilter], AS_HELP_STRING([--disable-stumblefilter], [Disables stumbleupon filter]))

AC_DEFINE_UNQUOTED([IRC_SERVER], ["$with_ircserver"], [The IRC server to connect to])
AC_DEFINE_UNQUOTED([IRC_PORT], ["$with_ircport"], [The IRC port to connect to])
AC_DEFINE_UNQUOTED([IRC_NICK], ["$with_ircnick"], [The IRC nick to connect to])
AC_DEFINE_UNQUOTED([IRC_CHANNEL], ["$with_ircchannel"], [The IRC channel to connect to])

AS_IF([test "x$enable_stumblefilter" != "xno"], [
    AC_DEFINE([STUMBLEUPON_FILTER], [1], [Should the stumbleupon filter be used])
])

# Checks for libraries.
AS_IF([test "x$enable_http" != "xno"], [
    AC_CHECK_LIB([curl], [curl_easy_init])
])

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h netdb.h stdlib.h string.h sys/socket.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([memset socket strstr])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
