#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT([bhnbot], [1.0], [jgworks@gmail.com])
AC_CONFIG_SRCDIR([src])
AM_INIT_AUTOMAKE(bhnbot, 1.0)
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_CC_C_O
AM_PROG_CC_C_O

AC_ARG_WITH([sqlite3], AS_HELP_STRING([--without-sqlite3], [Disable using sqlite3]))
AC_ARG_WITH([curl], AS_HELP_STRING([--without-curl], [Disable using curl]))
AC_ARG_WITH([pcre], AS_HELP_STRING([--without-pcre], [Disable using pcre]))
AC_ARG_ENABLE([stumbleupon-filter], AS_HELP_STRING([--disable-stumbleupon-filter], [Disables stumbleupon filter]))
AC_ARG_ENABLE([shorturls], AS_HELP_STRING([--disable-shorturls], [Disables creating short URLs]))
AC_ARG_ENABLE([imgurapi], AS_HELP_STRING([--disable-imgurapi], [Disables creating short URLs]))

AS_IF([test "x$enable_stumbleupon-filter" != "xno"], [
    AC_DEFINE([ENABLE_STUMBLEUPONFILTER], [1], [Should the stumbleupon filter be used])
])
AS_IF([test "x$enable_shorturls" != "xno"], [
    AC_DEFINE([ENABLE_SHORTURLS], [1], [Should short urls be used])
])
AS_IF([test "x$enable_imgurapi" != "xno"], [
    AC_DEFINE([ENABLE_IMGURAPI], [1], [Should the imgur API be used])
])

# Checks for libraries.
AS_IF([test "x$with_curl" != "xno"], [
    AC_CHECK_LIB([curl], [curl_easy_init])
])
# Checks for libraries.
AS_IF([test "x$with_sqlite3" != "xno"], [
    AC_CHECK_LIB([sqlite3], [sqlite3_open])
])
# Checks for libraries.
AS_IF([test "x$with_pcre" != "xno"], [
    AC_CHECK_LIB([pcre], [pcre_compile])
    AC_CHECK_LIB([pcre], [pcre_exec])
])

AC_CHECK_LIB([jansson], [json_loads,json_load_file])

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h netdb.h stdlib.h string.h sys/socket.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([memset socket strstr])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
